fixed chrome bug, created firefox bug on playlist page where anchor markers don't align with h2. fixed. bug that was created when work thumbnails were made anchors by moving styling class to parent anchor because that became the grid child/item. padding on thumbnails now working. other fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -337,6 +337,17 @@ hr {
     top: 5px;
 }
 
+.anchor-marker-h2 {
+    background: #FEF1A8;
+    padding: 3px 22px 3px 12px;
+    position: absolute;   
+    left: -50px;
+    /* firefox: */
+    /* top: 28px; */
+    /* chrome: */
+    top: 14px;
+}
+
 .playlist-group .anchor-marker {
     top: 28px;
 }
